# incident_management_trainer

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  main.py
backend/core/: __init__.py  claude.py  scenario.py  scoring.py  session.py
backend/models/: __init__.py  schemas.py
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ChatPane.tsx  CheckpointPanel.tsx  Debrief.tsx  IncidentTicket.tsx
tui/: app.py
